--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -8,7 +8,7 @@
     <meta name="description" content="Hotamul Music Website Moodbe"/>
     <meta name="author" content="hotamul"/>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
