--- a/src/main/resources/templates/layout/navbar.mustache
+++ b/src/main/resources/templates/layout/navbar.mustache
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="/"><img src="/moodbe-logo.png" alt="moodbe-logo">&nbsp;Moodbe</a>
+        <a class="navbar-brand" href="/"><img src="/images/moodbe-logo.png" alt="moodbe-logo">&nbsp;Moodbe</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
                 class="navbar-toggler-icon"></span></button>
@@ -11,14 +11,32 @@
                 </li>
                 <li class="nav-item active"><a class="nav-link inactive">Music</a></li>
             </ul>
-            <form class="d-flex">
-                <button class="btn btn-outline-dark" type="submit" disabled>
-                    <i class="bi-person-fill me-1"></i>
-                    로그인
-                    <!-- # TODO for reply noti -->
-                    <!--  -->
-                </button>
-            </form>
+            <div class="d-flex">
+                {{#userName}}
+                    <button class="btn btn-outline-dark" disabled>
+                        <img class="rounded-circle" src="{{profileImageUrl}}" alt="Generic placeholder image" width="20"
+                             height="20">
+                        {{userName}}
+                    </button>
+                    &nbsp;
+                    <a href="/logout">
+                        <button class="btn btn-outline-dark" type="button">
+                            <i class="bi-box-arrow-right me-1"></i>
+                            로그아웃
+                        </button>
+                    </a>
+                {{/userName}}
+                {{^userName}}
+                    <a href="/oauth2/authorization/kakao">
+                        <button class="btn btn-outline-dark" type="button">
+                            <i class="bi-person-fill me-1"></i>
+                            로그인
+                            <!-- # TODO for reply noti -->
+                            <!--  -->
+                        </button>
+                    </a>
+                {{/userName}}
+            </div>
         </div>
     </div>
 </nav>
