--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -18,6 +18,7 @@
           rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/css/style.css" rel="stylesheet"/>
+    <link href="/css/reply-style.css" rel="stylesheet"/>
     <link href="/css/font-style.css" rel="stylesheet"/>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <title>Moodbe</title>
