--- a/src/main/resources/templates/reply.mustache
+++ b/src/main/resources/templates/reply.mustache
@@ -7,7 +7,7 @@
                         <img class="rounded-circle shadow-1-strong me-3"
                              src="{{profileImageUrl}}" alt="avatar" width="65"
                              height="65"/>
-                        <div class="card w-100">
+                        <div class="card w-100 shadow-lg">
                             <div class="card-body p-4">
                                 <div class="">
                                     <h5>{{author}}</h5>
@@ -24,7 +24,7 @@
                     <img class="rounded-circle shadow-1-strong me-3"
                          src="{{profileImageUrl}}" alt="avatar" width="65"
                          height="65"/>
-                    <div class="card w-100">
+                    <div class="card w-100 shadow-lg">
                         <div class="card-body p-4">
                             <div class="">
                                 <form id="reply-register">
